--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 edition = "2024"
 license = "GPL-3.0-or-later"
 repository = "https://github.com/shadow3aaa/prism-player"
+description = "A media player built with Rust and FFmpeg"
 
 [dependencies]
 bytes = "1.10.1"
