feat(media): add audio playback, global clock and PTS-driven video pipeline
Add an ffmpeg-based audio subsystem (decoder, resampling and cpal playback) and integrate it into the app. Introduce a shared GlobalClock for unified audio/video timing and refactor the old video module into a media module. Update the video pipeline and decoder to carry PTS and schedule presentation based on PTS with a single-frame slot to avoid buffering. Update Cargo.lock with audio/playback dependencies and adjust main initialization to use media components.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ glam = "0.30.7"
 uuid = { version = "1.18.1", features = ["v4"] }
 flume = "0.11.1"
 clap = { version = "4.5.48", features = ["derive"] }
+rodio = "0.21.1"
+cpal = "0.16.0"
+ringbuf = "0.2"
